Added matches endpoints
