# app/Http/Controllers/MatchController.php
@@ -1,0 +1,84 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use App\Models\Match;
+use Illuminate\Http\Request;
+
+class MatchController extends Controller
+{
+    /**
+     * @OA\Post(
+     *      path="/matches",
+     *      operationId="storeMatch",
+     *      tags={"Matches"},
+     *      summary="Create new round",
+     *      description="Returns new round data",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/StoreMatchRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Match")
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
+    public function store()
+    {
+        //
+    }
+
+    /**
+     * @OA\Get(
+     *      path="/matches/{id}",
+     *      operationId="getMatchById",
+     *      tags={"Matches"},
+     *      summary="Get match information",
+     *      description="Returns match data",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Match id",
+     *          required=false,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Match")
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
+    public function show(Match $match)
+    {
+        //
+    }
+}
